--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <p class="origin"></p>
         </template>
     </section>
+    <button> Add Post </button>
     <script src="index.js"> </script>
 </body>
 
